InputString is now InputBuffer and it inherits directly from DynamicArray<char>

--- a/src/test/Makefile
+++ b/src/test/Makefile
@@ -6,13 +6,13 @@ FPCONV_DIR = $(DEPS_DIR)/fpconv/src
 
 USER_DIR = ..
 
-#TESTS = InputString_spec DynamicString_spec DynamicArray_spec IndexedDynamicArray_spec\
+#TESTS = InputBuffer_spec DynamicString_spec DynamicArray_spec IndexedDynamicArray_spec\
 FragmentedDynamicArray_spec ConstString_spec FixedSizeString_spec ValidationException_spec\
 Number_spec NumberParser_spec StringParser_spec NumberCell_spec StringNumberCell_spec\
 StringCell_spec EmptyCell_spec ErrorCell_spec CircRefCell_spec DivByZeroCell_spec\
 RootOfNegNumCell_spec ZeroRaisedOnZeroCell_spec Table_spec TableCellParser_spec
 
-TESTS = InputString_spec
+TESTS = InputBuffer_spec
 
 .PHONY: all clean test
 
@@ -131,7 +131,7 @@ $(eval $(call specInDir,String,FixedSizeString,BasicString.o ConstString.o))
 
 $(eval $(call specInDir,String,DynamicString,BasicString.o ConstString.o))
 
-$(eval $(call specInDir,String,InputString,BasicString.o ConstString.o DynamicString.o))
+$(eval $(call specInDir,IO,InputBuffer,BasicString.o ConstString.o))
 
 $(eval $(call specInDir,Parser,TypeParser,BasicString.o ValidationException.o))
 
