fixing seg fault in FragmentedDynamicArray forEach test, implementing copy and move for DynamicString and making ImmutableString uncopybale and unmovable

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-    "C_Cpp.clang_format_path": "/usr/bin/clang-3.8",
-    "clang.executable": "/usr/bin/clang-3.8",
+    "C_Cpp.clang_format_path": "/usr/bin/clang",
+    "clang.executable": "/usr/bin/clang",
     "clang.cxxflags": [
         "-std=c++14"
     ],
