adding some tests for Reader

--- a/src/test/Makefile
+++ b/src/test/Makefile
@@ -6,13 +6,11 @@ FPCONV_DIR = $(DEPS_DIR)/fpconv/src
 
 USER_DIR = ..
 
-#TESTS = InputBuffer_spec DynamicString_spec DynamicArray_spec IndexedDynamicArray_spec\
+TESTS = InputBuffer_spec DynamicString_spec DynamicArray_spec IndexedDynamicArray_spec\
 FragmentedDynamicArray_spec ConstString_spec FixedSizeString_spec ValidationException_spec\
 Number_spec NumberParser_spec StringParser_spec NumberCell_spec StringNumberCell_spec\
 StringCell_spec EmptyCell_spec ErrorCell_spec CircRefCell_spec DivByZeroCell_spec\
 RootOfNegNumCell_spec ZeroRaisedOnZeroCell_spec Table_spec TableCellParser_spec Reader_spec
-
-TESTS = Reader_spec
 
 .PHONY: all clean test
 
