renaming reserve to extend to match the exact action

--- a/src/test/Makefile
+++ b/src/test/Makefile
@@ -8,13 +8,13 @@ USER_DIR = ..
 
 TESTS = DynamicArray_spec IndexedDynamicArray_spec# Table_spec
 
-#InputBuffer_spec DynamicString_spec DynamicArray_spec IndexedDynamicArray_spec\
+#TESTS = InputBuffer_spec DynamicString_spec DynamicArray_spec IndexedDynamicArray_spec\
 ConstString_spec FixedSizeString_spec ValidationException_spec\
 Number_spec NumberParser_spec StringParser_spec NumberCell_spec StringNumberCell_spec\
 StringCell_spec EmptyCell_spec ErrorCell_spec CircRefCell_spec DivByZeroCell_spec\
 RootOfNegNumCell_spec ZeroRaisedOnZeroCell_spec Table_spec TableCellParser_spec Reader_spec
 
-.PHONY: all clean test
+.PHONY: all clean test chrome-open-coverage
 
 all: $(TESTS)
 
@@ -171,3 +171,6 @@ test: all
 	$(LCOV_CURR_DIR) --capture -o test.info
 	lcov --remove test.info "/*/include/*" -o spec.info
 	genhtml spec.info --highlight --legend --demangle-cpp -o coverage
+
+chrome-open-coverage:
+	google-chrome coverage/index.html
