refactoring Reader and adding more tests

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -49,6 +49,7 @@
         "cfenv": "cpp",
         "*.htd": "cpp",
         "*.tci": "cpp",
-        "*.mcrs": "cpp"
+        "*.mcrs": "cpp",
+        "cstring": "cpp"
     }
 }
