working under TableParser, adding copy and move semantics  to Row and Table

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,8 @@
         "utility": "cpp",
         "*.htd": "cpp",
         "*.tci": "cpp",
-        "*.mcrs": "cpp"
+        "*.mcrs": "cpp",
+        "cfenv": "cpp",
+        "cstring": "cpp"
     }
 }
